# ai-rust

./: .env_template  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
src/: main.rs
src/agent/: agent.rs  cli.rs  local.rs  mod.rs  openai.rs  registry.rs  request.rs
