[package]
name = "ai-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
dotenv = "0.15.0"
futures = "0.3.28"
reqwest = { version = "0.11.17", features = ["json"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
