[package]
name = "ai-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
dotenv = "0.15.0"
futures = "0.3.28"
futures-util = "0.3.28"
prettytable-rs = "0.10.0"
reqwest = { version = "0.11.17", features = ["json"] }
rustyline = "11.0.0"
rustyline-derive = "0.8.0"
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
